<resources>
    <string name="app_name">Agriculture</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="category">Category</string>
    <string name="post">Post</string>
    <string name="news">News</string>
    <string name="setting">Setting</string>
</resources>