<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeMenu"
        android:title="@string/home"
        android:icon="@drawable/baseline_home_24"/>
    <item
        android:id="@+id/categoryMenu"
        android:title="@string/category"
        android:icon="@drawable/baseline_category_24"/>
    <item
        android:id="@+id/postMenu"
        android:title="@string/post"
        android:icon="@drawable/cloud_data_upload_icon"/>
    <item
        android:id="@+id/newsMenu"
        android:title="@string/news"
        android:icon="@drawable/baseline_newspaper_24"/>
    <item
        android:id="@+id/settingsMenu"
        android:title="@string/setting"
        android:icon="@drawable/baseline_settings_24"/>
</menu>